tests/ast_interpreter/logical.expected
true
false
false
false
true
true
true
false
true
false
true
false
true
false
true
false
false
true
<string>:33:23: error: division by zero
    print(true && (10 / 0 > 0));
                      ^
